# librqbit-utp

./: .gitignore  Cargo.toml  DESIGN.md  README.md  TODO.md
docs/: states.dot
examples/: bench.rs  bench_tcp_std.rs  bench_tcp_tokio.rs  bench_udp.rs  bench_udp_std.rs  bench_udp_tokio.rs  bench_utp.rs  client.rs  create_canary_file.rs  echo.rs  echo_minimal.rs  server.rs
examples/common/: example_common.rs
src/: assembled_rx.rs  constants.rs  double_buf.rs  error.rs  fragment_tx.rs  lib.rs  macros.rs  message.rs  metrics.rs  mtu.rs  packet_pool.rs  raw.rs  recovery.rs  rtte.rs  seq_nr.rs  smoltcp_assembler.rs  socket.rs  spawn_utils.rs  stream.rs  stream_dispatch.rs  stream_rx.rs  stream_tx.rs  stream_tx_segments.rs  traits.rs  transport_trait.rs  utils.rs  write_canary_file.rs
src/congestion/: cubic.rs  mod.rs  reno.rs  tracing.rs
src/e2e_tests/: lossy_socket.rs  mod.rs
src/raw/: ext_close_reason.rs  selective_ack.rs
src/stream_dispatch/: tests.rs
src/stream_dispatch/tests/: api.rs  basics.rs  congestion.rs  delayed_ack.rs  fast_retransmit.rs  flow_control.rs  inactivity_timeout.rs  mtu_probing.rs  nagle.rs  retransmit_timer.rs  rto.rs  rtte.rs  shutdown.rs  stream_api.rs
src/test_util/: cmphead.rs  env.rs  mod.rs  transport.rs
