[package]
name = "librqbit-utp"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["net", "sync", "time", "io-util", "rt"] }
anyhow = "1.0.95"
rand = "0.8.5"
tracing = "0.1.41"
parking_lot = "0.12.3"
mtu = "0.2.4"
bitvec = "1.0.1"
futures = "*"
rustc-hash = "2.1.0"
tokio-util = "0.7.13"
ringbuf = "0.4.7"
metrics = "0.24.1"
lazy_static = "1.5.0"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = "*"
futures = "*"
metrics-exporter-prometheus = "0.16.2"

[profile.release]
panic = "abort"
