[package]
name = "librqbit-utp"
version = "0.3.0-beta.1"
edition = "2021"
description = "uTP (uTorrent Transport Protocol) library, implements BEP 29"
license = "Apache-2.0"
documentation = "https://docs.rs/librqbit-utp"
repository = "https://github.com/ikatson/librqbit-utp"
readme = "README.md"

[features]
default = []
export-metrics = ["metrics"]
per-connection-metrics = ["metrics"]

[dependencies]
tokio = { version = "1", features = [
    "net",
    "sync",
    "time",
    "io-util",
    "rt",
    "macros",
] }
anyhow = "1.0.95"
rand = "0.8.5"
tracing = "0.1.41"
parking_lot = "0.12.3"
bitvec = "1.0.1"
rustc-hash = "2.1.0"
tokio-util = "0.7.13"
ringbuf = "0.4.7"
metrics = { version = "0.24.1", optional = true }
lazy_static = "1.5.0"
socket2 = "0.5.8"
dontfrag = { version = "1.0.1", features = ["tokio"] }
libc = "0.2.172"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
metrics-exporter-prometheus = "0.16.2"
metrics = "0.24.1"
futures = "0.3"
clap = { version = "4.5.29", features = ["derive"] }
libutp-rs2 = { version = "0.1.0", path = "../libutp-rs-2/libutp-rs2" }
approx = "0.5.1"

[profile.release]
panic = "abort"
debug = true

[profile.release-small]
inherits = "release"
panic = "abort"
debug = false
strip = true
